--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "angular-quickstart",
   "version": "1.0.0",
   "scripts": {
-    "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
     "lite": "lite-server",
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
     "clean-js": "sudo find ./src -name \\*.js* -type f -delete"
   },
   "dependencies": {
@@ -33,7 +30,11 @@
     "@types/core-js": "^0.9.34",
     "@types/node": "^6.0.45",
     "concurrently": "^3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-sourcemaps": "^2.2.0",
+    "gulp-typescript": "^3.1.3",
     "lite-server": "^2.2.2",
-    "typescript": "^2.0.3"
+    "path": "^0.12.7",
+    "systemjs-builder": "^0.15.34"
   }
 }
